Add Australian Political Stress indicator notebook

--- a/notebooks/Australian_Political_Stress_Indicator.ipynb
+++ b/notebooks/Australian_Political_Stress_Indicator.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7950bce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd50fce6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -24,7 +22,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pangeo3] *",
+   "display_name": "Python [conda env:pangeo3]",
    "language": "python",
    "name": "conda-env-pangeo3-py"
   },
