readme data source notes

--- a/notebooks/AUS_PSI.ipynb
+++ b/notebooks/AUS_PSI.ipynb
@@ -3329,10 +3329,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('../output/cliondynamics_Australia_1.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##todo plot Australia and USA"
+   ]
   }
  ],
  "metadata": {
