--- a/notebooks/AUS_PSI.ipynb
+++ b/notebooks/AUS_PSI.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "Data is taken from: \n",
-    "- Butlin (see econhist repoistory) - for some consistent columns from 1924\n",
+    "- Butlin (see econhist repository) - for some consistent columns from 1924\n",
     "- ANU election surveys\n",
     "- Australian Bureau of Statistics\n",
     "- Fair Work Commission - taking their minimum wage table as the UnskillWage and their Fitter Wage as the ProdWage for the first pass"
